--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Alice&display=swap");
+
 body {
   margin: 0;
   padding: 0;
+  font-family: "Alice", serif;
 }
 
 main {
@@ -108,7 +111,7 @@ main {
   display: flex;
   flex-direction: column;
   margin-top: 50px;
-  width: 172px;
+  /* width: 172px; */
   height: 91px;
 }
 
